
- When deleting checkpoints, reset the index to 1 when there are no more
  checkpoints left

- Added 'RL' for rasterline and 'CY' for cycle in line to list of conditionals
  that can be used for breakpoints.

- in mc/ms commands show asterisk for 1s and dots for 0s, not the other way
  around

- adjust number of disassembled lines so the top line does not scroll out of
  the window when labels are used

  
** vdrive
---------

- added rudimentary support for CMD-style reading of the RTC

- respect error info in disk images (only when reading right now). Should trick
  some simple protections.
  

** C-64 fixes
-------------

- added support for MAX Basic cartridge, new CRTID 61

- added clockport device for rrnet mk3

- fixed reading of 'open' clockport, fixed io dump for clockport devices

- implemented support for cartridge hardware revision in the crt format

- When attaching an Easyflash cartridge image, replace the EAPI driver with the 
  one for the flash chip VICE supports. This way EF images that contain a
  different driver (for whatever reason) will still work.

- various keymaps added and/or fixed/updated.  
  

** C-128 fixes
--------------

- added proper C128D model type.

- various MMU fixes

- fixed broken memory mapping in C64 mode

- Completely rewritten VDC vertical handling code. VDC101 demo with it's 
  vdc-split technique is now fully emulated. This rewrite attempts to emulate 
  more how the VDC works internally, and how the video signal/screen react, so 
  the border height etc is now more naturally handled.


** Gtk3 UI
----------

- Implemented "restore display" (Alt+r). Resets the active window to its
  minimal/natural size. Handy when stretching the window and then not knowing
  you can make the window smaller again with resizing that same window until
  it doesn't get smaller.

- Change double-clicking images in smart/diskattach dialogs to 'open' instead
  of autostarting
  
- added options to select rendering backend and filter
